# tfg

./: .gitignore  .gitmodules  README.md  data.txt  init.sh  justfile  pyproject.toml  trainer_config.yaml
data/: test.txt  train.txt
memoria/: anexo.typ  bibliografia.bib  conf.typ  main.typ  notes.typ  portada.typ  resumen.typ
src/uncertainty_estimation/: __init__.py  data.py  sweep.py  train.py
src/uncertainty_estimation/model/: __init__.py  conv_vae.py  convmixer.py  layers.py  model.py  separable_convolution.py  unet.py  vae.py
src/uncertainty_estimation/utils/: __init__.py  pipeline.py  preprocess.py  sensor.py
tests/: test_pipeline.py
