[project]
name = "uncertainty_estimation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "rubenjr0", email = "rubenjr0@proton.me" }
]
requires-python = ">=3.12"
dependencies = [
    "depth-pro",
    "h5py>=3.13.0",
    "joblib>=1.5.1",
    "jsonargparse[signatures]>=4.40.0",
    "lightning>=2.5.1",
    "neptune>=1.13.0",
    "optuna>=4.3.0",
    "optuna-integration[pytorch-lightning]>=4.3.0",
    "prodigyopt>=1.1.2",
    "python-dotenv>=1.1.0",
    "ranger21",
    "rerun-sdk>=0.22.1",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
]


[dependency-groups]
dev = [
    "optuna-dashboard>=0.18.0",
    "pytest>=8.3.5",
    "ruff>=0.11.2",
]

[tool.uv.sources]
depth-pro = { git = "https://github.com/apple/ml-depth-pro" }
ranger21 = { git = "https://github.com/lessw2020/Ranger21.git" }

[build-system]
requires = ["uv_build>=0.7.12,<0.8.0"]
build-backend = "uv_build"
